--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,11 @@
 /coverage
 
 # next.js
-
-
+/.next/
+/out/
 
 # production
-
+/build
 
 # misc
 .DS_Store
@@ -26,14 +26,17 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-
+.env*.local
 
 # vercel
 .vercel
 
 # typescript
+*.tsbuildinfo
 
+.env
 
-
+artifacts
+cache
 
 local.json
